# rcr-verify-python

./: LICENSE  README.md  pyproject.toml
examples/: verify_bundle.py
rcr_verify/: __init__.py  cli.py  verify.py
tests/: test_verify.py
