[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcr-verify"
version = "0.1.0b1"
description = "Verifier for RCR/1 receipts and RANKIGI closure bundles"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "rcr-spec contributors" }
]
requires-python = ">=3.8"
keywords = ["rcr", "receipt", "verifier", "audit", "ai-governance", "sigstore", "rfc3161"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]

[project.urls]
Homepage = "https://github.com/rcr-spec/rcr-verify-python"
Specification = "https://github.com/rcr-spec/spec"
Reference = "https://rankigi.com/verify.py"

[project.scripts]
rcr-verify = "rcr_verify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rcr_verify"]
